# ML

./: CMakeLists.txt  LogisticRegression.cpp  LogisticRegression.h  README.md  README.md.rtf  bt  bt.cpp  test.csv  test_iris.csv  test_reg.csv  test_reg2.csv  test_reg_ridge.csv  test_reg_tr.csv  test_ver.csv  testtr.csv  testtr_iris.csv  testtr_ver.csv  train_reg.csv  train_reg2.csv  train_reg_ridge.csv  train_reg_tr2.csv  train_reg_tr_ridge.csv  traindat.csv  traindat_iris.csv  traindat_ver.csv  traintar.csv  traintar_iris.csv  traintar_ver.csv  verebral.csv
ML/: .cproject  .project
ML/Debug/: makefile  objects.mk
ML/Debug/src/: bigpoly.d  bigpolyarith.d  bigpolyarray.d  ciphertext.d  decryptor.d  encryptor.d  evaluationkeys.d  evaluator.d  keygenerator.d  plaintext.d  polycrt.d  subdir.mk
ML/Debug/src/util/: common.d  computation.d  locks.d  ntt.d  polyarith.d  polycore.d  polyfftmult.d  subdir.mk  uintextras.d
ML/Release/: makefile  sources.mk
ML/Release/src/: biguint.d  bt.d  chooser.d  encoder.d  encryptionparams.d  randomgen.d  simulator.d  subdir.mk  utilities.d
ML/Release/src/util/: clipnormal.d  crt.d  mempool.d  modulus.d  polyarithmod.d  polyextras.d  polyfftmultmod.d  polymodulus.d  subdir.mk  uintarith.d  uintarithmod.d  uintcore.d
src/: LinearRegression.cpp  LinearRegression.h  LogisticRegression.cpp  LogisticRegression.h  Makefile.in  OwnLinearRegression.cpp  OwnLinearRegression.h  Ungespeichertes Dokument 1  aba.csv  abalone.csv  auto-mpg.data  bigpoly.cpp  bt  bt.cpp  configure  configure.ac  o-ring-erosion-or-blowby.csv  parkinson_test.csv  parkinson_train.csv  test_reg.csv  test_reg2.csv  test_reg_ridge.csv  test_reg_tr.csv  test_reg_tr_ridge.csv  train_reg.csv  train_reg2.csv  train_reg_ridge.csv  train_reg_tr.csv  train_reg_tr2.csv  train_reg_tr_ridge.csv
src/Seal/: chooser.cpp  ciphertext.h  decryptor.cpp  encoder.cpp  encryptionparams.cpp  encryptor.cpp  evaluator.cpp  keygenerator.cpp  polycrt.cpp  simulator.cpp
src/Seal/util/: computation.cpp  computation.h  crt.cpp  mempool.cpp  modulus.cpp  modulus.h  ntt.cpp  polyarith.cpp  polyarith.h  polyarithmod.h  polycore.cpp  polyextras.h  polyfftmult.cpp  polyfftmultmod.cpp  polymodulus.cpp  uintcore.cpp  uintextras.h
src/util/: clipnormal.cpp  common.cpp  common.h  computation.cpp  crt.cpp  crt.h  locks.cpp  mempool.cpp  mempool.h  ntt.h  polyarith.cpp  polyarithmod.cpp  polycore.h  polyextras.cpp  polyfftmult.cpp  polyfftmult.h  polyfftmultmod.cpp  polyfftmultmod.h  polymodulus.cpp  randomtostd.h  uintarith.cpp  uintarith.h  uintarithmod.cpp  uintarithmod.h  uintcore.h  uintextras.cpp
