cmake_minimum_required(VERSION 3.8)
project(ML)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        src/util/clipnormal.cpp
        src/util/clipnormal.h
        src/util/common.cpp
        src/util/common.h
        src/util/computation.cpp
        src/util/computation.h
        src/util/crt.cpp
        src/util/crt.h
        src/util/defines.h
        src/util/locks.cpp
        src/util/locks.h
        src/util/mempool.cpp
        src/util/mempool.h
        src/util/modulus.cpp
        src/util/modulus.h
        src/util/ntt.cpp
        src/util/ntt.h
        src/util/polyarith.cpp
        src/util/polyarith.h
        src/util/polyarithmod.cpp
        src/util/polyarithmod.h
        src/util/polycore.cpp
        src/util/polycore.h
        src/util/polyextras.cpp
        src/util/polyextras.h
        src/util/polyfftmult.cpp
        src/util/polyfftmult.h
        src/util/polyfftmultmod.cpp
        src/util/polyfftmultmod.h
        src/util/polymodulus.cpp
        src/util/polymodulus.h
        src/util/randomtostd.h
        src/util/uintarith.cpp
        src/util/uintarith.h
        src/util/uintarithmod.cpp
        src/util/uintarithmod.h
        src/util/uintcore.cpp
        src/util/uintcore.h
        src/util/uintextras.cpp
        src/util/uintextras.h
        src/auto-mpg.csv
        src/auto-mpg.data
        src/bigpoly.cpp
        src/bigpoly.h
        src/bigpolyarith.cpp
        src/bigpolyarith.h
        src/bigpolyarray.cpp
        src/bigpolyarray.h
        src/biguint.cpp
        src/biguint.h
        src/breast-cancer-wisconsin.csv
        src/bt.cpp
        src/chooser.cpp
        src/chooser.h
        src/ciphertext.cpp
        src/ciphertext.h
        src/decryptor.cpp
        src/decryptor.h
        src/encoder.cpp
        src/encoder.h
        src/encryptionparams.cpp
        src/encryptionparams.h
        src/encryptor.cpp
        src/encryptor.h
        src/evaluationkeys.cpp
        src/evaluationkeys.h
        src/evaluator.cpp
        src/evaluator.h
        src/keygenerator.cpp
        src/keygenerator.h
        src/LogisticRegression.cpp
        src/LogisticRegression.h
        src/memorypoolhandle.h
        src/o-ring-erosion-or-blowby.csv
        src/OwnLinearRegression.cpp
        src/OwnLinearRegression.h
        src/parkinson_test.csv
        src/parkinson_train.csv
        src/parkinsons_updrs.csv
        src/plaintext.cpp
        src/plaintext.h
        src/polycrt.cpp
        src/polycrt.h
        src/randomgen.cpp
        src/randomgen.h
        src/seal.h
        src/simulator.cpp
        src/simulator.h
        src/Skin_NonSkin.cvs
        src/spect_test.csv
        src/spect_train.csv
        src/utilities.cpp
        src/utilities.h
        src/yacht_hydrodynamics.csv)

add_executable(ML ${SOURCE_FILES})